main-app/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-string
spec:
  replicas: 1
  selector:
    matchLabels:
      app: random-string
  template:
    metadata:
      labels:
        app: random-string
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: random-string-server
          image: niklasmtj/main-app-server:v1.3
          volumeMounts: # Mount volume
          - name: shared-image
            mountPath: /app/files
        - name: random-string-generator
          image: niklasmtj/main-app-generator:v1.3
          volumeMounts: # Mount volume
          - name: shared-image
            mountPath: /app/files
