main-app/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: random-string-svc
spec:
  type: ClusterIP
  selector:
    app: random-string
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
