main-app/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: random-string-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: random-string-svc
          servicePort: 2345
